# libshveu

./: AUTHORS  Android.mk  Makefile.am  README  TODO  autogen.sh  configure.ac  libshveu.plan  shveu-uninstalled.pc.in  shveu.pc.in
doc/: Doxyfile.in  Makefile.am  shveu-convert.1
include/: Makefile.am
include/shveu/: Makefile.am  shveu.h  veu_colorspace.h
release_notes/: libshveu-1.1.0.txt  libshveu-1.2.0.txt  libshveu-1.3.0.txt
src/: Makefile.am
src/examples/: Makefile.am
src/libshveu/: Android.mk  Makefile.am  Version_script.in  shveu_regs.h  veu_colorspace.c
src/tools/: Android.mk  Makefile.am  display.c  display.h  shveu-convert.c  shveu-display.c
